--- a/Code/Game/Game.vcxproj
+++ b/Code/Game/Game.vcxproj
@@ -113,6 +113,8 @@
     <ClInclude Include="LightController.h" />
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="PreCompiled.h" />
+    <ClInclude Include="Resources\Resource.h" />
+    <ClInclude Include="Resources\targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CameraController.cpp" />
@@ -123,6 +125,16 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Game.aps" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\Game.ico" />
+    <Image Include="Resources\small.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resources\Game.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
