--- a/Code/Engine/EngineCode/Engine.vcxproj
+++ b/Code/Engine/EngineCode/Engine.vcxproj
@@ -136,7 +136,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_ENABLE_DEBUG_LOGS;EAE2014_SHOULDALLRETURNVALUESBECHECKED;EAE2014_GRAPHICS_SHOULDD3DDEBUGINFOBEENABLED;EAE2014_GRAPHICS_SHOULDDEBUGSHADERSBEUSED;EAE2014_GRAPHICS_AREPIXEVENTSENABLED;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_ENABLE_DEBUG_LOGS;EAE2014_SHOULDALLRETURNVALUESBECHECKED;EAE2014_GRAPHICS_SHOULDD3DDEBUGINFOBEENABLED;EAE2014_GRAPHICS_SHOULDDEBUGSHADERSBEUSED;EAE2014_GRAPHICS_AREPIXEVENTSENABLED;EAE2014_DEBUGLINE_SHOULDDRAW;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>PreCompiled.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(DXSDK_DIR)Include\;$(EngineDir)Util;$(EngineDir)EngineCode</AdditionalIncludeDirectories>
     </ClCompile>
